<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_addr"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDeviceContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_state"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textStateContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_disconnected"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_connection"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:text="@string/button_connect"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_settings"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:text="@string/button_settings"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_users"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:text="@string/button_users"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_streaming"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:text="@string/button_startstreaming"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_recognition"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:text="@string/button_startrecog"
                android:textColor="@color/black" >
            </Button>

            <Button
                android:id="@+id/button_training"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/button_starttraining"
                android:textColor="@color/black" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/button_accl"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="0dp"
                android:text="@string/button_accl"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/button_gyro"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="50dp"
                android:text="@string/button_gyro"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0.01pt"
        android:layout_weight="0.7" >

        <com.androidplot.xy.XYPlot
            android:id="@+id/dynamicPlot"
            android:layout_width="fill_parent"
            android:layout_height="327dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            androidPlot.legendWidget.heightMetric.value="25dp"
            androidPlot.legendWidget.textPaint.textSize="12dp"
            androidPlot.titleWidget.labelPaint.textSize="30dp"
            title="Shimmer Data Plot" />
    </LinearLayout>

</LinearLayout>