<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/title_new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/shimmer_grey"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/new_user"
            android:textColor="#fff" />
        
        <EditText
            android:id="@+id/new_use_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_done"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/button_done" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/button_cancel" />
    </LinearLayout>

</LinearLayout>